possibile fix to panel visibility on toggle click :-)

--- a/css/style.css
+++ b/css/style.css
@@ -94,8 +94,9 @@
   border-radius: 50px;
 }
 
-.active {
+.panel.active {
   max-height: 200px;
+  overflow: visible;
 }
 
 .col2 button:hover {
